--- a/contact-me.html
+++ b/contact-me.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <style>
+
+      body{
+        background-color: powderblue;
+      }
+
+      hr{
+        background-color: ;
+        border-style: none;
+        border-top-style: dotted;
+        border-color: grey;
+        border-width: 10px;
+        height: 0px;
+        width: 10%;
+      }
+      img{
+        height: 150px;
+      }
+    </style>
   </head>
   <body>
     <h1>My Contact Details</h1>
