--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
 <head>
   <meta charset="utf-8">
   <title>Chaitanya's Personal Site</title>
+  <style>
+
+    body{
+      background-color: powderblue;
+    }
+
+    hr{
+      background-color: ;
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width: 10px;
+      height: 0px;
+      width: 10%;
+    }
+    img{
+      height: 150px;
+    }
+  </style>
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/shoes.jg" alt="shoes" /></td>
+      <td><img src="Images/shoes.jpg" alt="shoes" /></td>
       <td><h1>Chaitanya Gadkari</h1>
       <p><em>Founder and CTO of the <strong><a href="https://www.hostinger.in/">Hostinger</a></strong>.</em></p>
       <p>I am iOS and Web Developer.I love Coffee and Gaming.</p></td>
@@ -23,6 +42,7 @@
     <li>N.L.Dalmia High School💛 (5th till 12th Class).</li>
     <li>MGM College for Engineering.</li>
   </ul>
+  <hr>
   <h3>Work Experience</h3>
   <table border="1">
     <thead>
@@ -46,6 +66,7 @@
       <td>Web Dev Experience</td>
     </tr>
   </table>
+  <hr>
   <table border="1">
     <thead>
       <tr>
