--- a/index.html
+++ b/index.html
@@ -4,31 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Chaitanya's Personal Site</title>
-  <style>
-
-    body{
-      background-color: powderblue;
-    }
-
-    hr{
-      background-color: ;
-      border-style: none;
-      border-top-style: dotted;
-      border-color: grey;
-      border-width: 10px;
-      height: 0px;
-      width: 10%;
-    }
-    img{
-      height: 150px;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/shoes.jpg" alt="shoes" /></td>
+      <td><img class="Me" src="https://instagram.fbom12-1.fna.fbcdn.net/v/t51.2885-19/s320x320/103835565_1399839253544182_5144859862256144182_n.jpg?_nc_ht=instagram.fbom12-1.fna.fbcdn.net&_nc_ohc=HA97iOHijoIAX8MojcW&tp=1&oh=24eea58c3b6ceeb5157c3ad794136ebb&oe=60541890" alt="Profile Photo"</td>
       <td><h1>Chaitanya Gadkari</h1>
       <p><em>Founder and CTO of the <strong><a href="https://www.hostinger.in/">Hostinger</a></strong>.</em></p>
       <p>I am iOS and Web Developer.I love Coffee and Gaming.</p></td>
